--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -68,7 +68,7 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border m-0;
   }
   body {
     @apply bg-background text-foreground;
